// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FunctionalWithState component should render 1`] = `
<div
  className="container"
>
  <form>
    <h2>
      FunctionalWithState
    </h2>
    <div>
      <input
        id="email"
        onChange={[Function]}
        value=""
      />
      <label
        htmlFor="email"
      >
        Email
      </label>
    </div>
    <div>
      <input
        id="password"
        onChange={[Function]}
        type="password"
        value=""
      />
      <label
        htmlFor="password"
      >
        Password
      </label>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`FunctionalWithState component should render with data 1`] = `
<div
  className="container"
>
  <form>
    <h2>
      FunctionalWithState
    </h2>
    <div>
      <input
        id="email"
        onChange={[Function]}
        value="email"
      />
      <label
        htmlFor="email"
      >
        Email
      </label>
    </div>
    <div>
      <input
        id="password"
        onChange={[Function]}
        type="password"
        value="password"
      />
      <label
        htmlFor="password"
      >
        Password
      </label>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
